--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <style>
             body{
-                background-color: rgb(88, 150, 152);
-                color: aliceblue;
+                background-color: rgb(131, 91, 35);
+                color: rgb(153, 170, 185);
             }
         </style>
     </head>
